@@ -1,3 +1,9 @@
+2010-05-31  Andreia Gaita  <avidigal@novell.com>
+
+	* HtmlElement.cs: make the style attribute setter and getter to use
+	  the javascript-exposed style properties instead of the dom, seems
+	  to be what SL is using. (fixes drt 981)
+
 2010-05-27  Alan McGovern  <amcgovern@novell.com>
 
 	* ScriptObject.cs: Add the last missing lock to see if that'll
